@@ -9,6 +9,7 @@ Log:
 	- fixed TI84+ battery status
 	- updated/fixed TI86 dumper
 	- Titanium/USB didn't have the FTS_FOLDER flag
+	- correctly set up the data_type & device_type field of FlashContent when receiving app
 
 - 26/08/2006, version 0.2.6: roms
 	- checked with ValGring, tested and validated.
